clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00065.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00065.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 1 : s32i
        %3 = const 2 : s32i
        %4 = add %2, %3 : s32i [nsw]
        %5 = const 3 : s32i
        sub
        store %6, %0
        %7 = load %0 : s32i
        return %7
}
