clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00072.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00072.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i[2], "arr", align 4
        %2 = alloca s32i*, "p", align 8
        %3 = const 0 : s32i
        store %3, %0
        %4 = const 0 : s64i
        get_element
        store %5, %2, align 8
        %6 = const 1 : s32i
        %7 = load %2 : s32i*, align 8
        ptr_stride
        store %8, %2, align 8
        %9 = const 123 : s32i
        %10 = load %2 : s32i*, align 8
        store %9, %10, align 4
        scope {
                %13 = const 1 : s64i
                get_element
                %15 = load %14 : s32i, align 4
                %16 = const 123 : s32i
                cmp
                if %17 {
                        %18 = const 1 : s32i
                        store %18, %0
                        %19 = load %0 : s32i
                        return %19
                }
                yield
        }
        %11 = const 0 : s32i
        store %11, %0
        %12 = load %0 : s32i
        return %12
}
